--- a/Barroetaveña.facundo/Clase03.Ejer02/Clase03.Ejer02.csproj
+++ b/Barroetaveña.facundo/Clase03.Ejer02/Clase03.Ejer02.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06701800-DA3A-4F0D-994B-5C8BA598C21E}</ProjectGuid>
+    <ProjectGuid>{FF75E74F-7FDF-4B44-8A86-028466D912C9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Barroetaveña.facundo.Ejer01</RootNamespace>
-    <AssemblyName>Barroetaveña.facundo.Ejer01</AssemblyName>
+    <RootNamespace>Clase03.Ejer02</RootNamespace>
+    <AssemblyName>Clase03.Ejer02</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,8 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auto.cs" />
+    <Compile Include="Carrera.cs" />
+    <Compile Include="eFabricante.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rueda.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
