--- a/Barroetaveña.facundo/Clase05/Clase05.csproj
+++ b/Barroetaveña.facundo/Clase05/Clase05.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06701800-DA3A-4F0D-994B-5C8BA598C21E}</ProjectGuid>
+    <ProjectGuid>{6BC9E069-2C6E-42A3-A7B9-BF52EAC7E296}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Barroetaveña.facundo.Ejer01</RootNamespace>
-    <AssemblyName>Barroetaveña.facundo.Ejer01</AssemblyName>
+    <RootNamespace>Entidades</RootNamespace>
+    <AssemblyName>Clase05</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cosa.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
