--- a/Barroetaveña.facundo/Clases/Clases.csproj
+++ b/Barroetaveña.facundo/Clases/Clases.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06701800-DA3A-4F0D-994B-5C8BA598C21E}</ProjectGuid>
+    <ProjectGuid>{AF46C53A-6309-4189-8BC5-005E66C7C97B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Barroetaveña.facundo.Ejer01</RootNamespace>
-    <AssemblyName>Barroetaveña.facundo.Ejer01</AssemblyName>
+    <RootNamespace>Clases</RootNamespace>
+    <AssemblyName>Clases</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
