--- a/Barroetaveña.facundo/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/Barroetaveña.facundo/ConsoleApplication1/ConsoleApplication1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06701800-DA3A-4F0D-994B-5C8BA598C21E}</ProjectGuid>
+    <ProjectGuid>9131464e-16a8-47cb-91b1-ebcb48174afb</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Barroetaveña.facundo.Ejer01</RootNamespace>
-    <AssemblyName>Barroetaveña.facundo.Ejer01</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
